* moved user indicator to footer * styled login, register and lost_password page

--- a/wp-content/themes/huskies-theme/less/content.less
+++ b/wp-content/themes/huskies-theme/less/content.less
@@ -9,6 +9,8 @@
     small { font-family: @sansFontFamily; }
   }
 
+  .frontpage-article .article_content { z-index: 50; }
+
   article {
     position: relative;
     
