--- a/wp-content/themes/huskies-theme/less/footer.less
+++ b/wp-content/themes/huskies-theme/less/footer.less
@@ -23,6 +23,55 @@
   }
 }
 
+#secondFooter {
+  #user_info {
+    z-index: 500;
+    text-align: center;
+    margin-top: 2.5rem;
+
+    > img { 
+      @media (max-width: 767px) { display: none; }
+      .border-radius(50%);
+      display: inline;
+    }
+
+    > .avatar_anonym {
+      @media (max-width: 767px) { display: none; }
+      width: 10rem;
+      color: @grayLight;
+      cursor: default;
+      text-align: center;
+      font-size: 8rem;
+      height: 10rem;
+      .border-radius(50%);
+      background-color: #ddd;
+      border: 0.4rem solid @white;
+      .box-shadow(0 1px 3px rgba(0,0,0,.1));
+      margin: 0 auto;
+
+      i { 
+        position: relative;
+        top: 5%; 
+      }
+    }
+
+    > hr {
+      margin: 0.25rem 0;
+      width: 50%;
+      margin-left: 25%;
+    }
+
+    > p {
+      text-align: center;
+      margin: 0;
+    }
+
+    > p:first-of-type {
+      margin-top: 1rem;
+    }
+  }
+}
+
 #top_navigator { 
   background-color: @green;
   .border-radius(50%);
