--- a/wp-content/themes/huskies-theme/less/login.less
+++ b/wp-content/themes/huskies-theme/less/login.less
@@ -1,6 +1,5 @@
 body.login {
   background-image: url("@{baseBackground}");
-  // height: auto;
 
   #login {
     h1 {
@@ -48,7 +47,7 @@ body.login {
       }
 
       margin-top: 1.5rem;
-      position: relative;
+      position: relative !important;
       .box-shadow(0rem 0rem 0.75rem 0.05rem @grayDarker);
       .border-radius(0.5rem);
       .form-horizontal;
@@ -85,7 +84,22 @@ body.login {
         }
       }
     }
-    #backtoblog { display: none; }
+    #backtoblog { 
+      text-align: center;
+      box-shadow: 0rem -0.6rem 0.8rem -0.8rem @black;
+      padding: 0;
+      margin-top: 1rem;
+      padding-top: 0.5rem;
+
+      a {
+        color: @gray !important;
+
+        &:hover {
+          color: @linkColor !important;
+          text-decoration: none;
+        }
+      }
+    }
   }
 }
 
