add contact link in first footer start basic styling for reply form

--- a/wp-content/themes/huskies-theme/less/content.less
+++ b/wp-content/themes/huskies-theme/less/content.less
@@ -22,7 +22,8 @@
     &.page > header,
     &.attachment > header,
     &.forum > header,
-    &.topic > header {
+    &.topic > header,
+    &.reply > header {
       margin-top: 3rem; 
       h1 small { font-size: 1.5rem; }
     }
